--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul id="sidemenu">
             <li>
                 <a href="#home">HOME</a>
-                <a href="#about_page">ABOUT</a>
+                <a href="#about_page">ABOUT ME</a>
                 <a href="#service-id">SERVICES</a>
                 <a href="#project-id">PROJECT</a>
                 <a href="#contact-id">CONTACT US</a>
