--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="https://github.com/AnitaSahoo2002"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/anita-sahoo-550589281/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://twitter.com/anitasahoo0303"><i class="fa-brands fa-twitter"></i></a>
-                <i class="fas fa-times" onclick="closemenu()"></i>
+                <i class="cross fas fa-times" onclick="closemenu()"></i>
             </li>
         </ul>
         <i class="fas fa-bars" onclick="openmenu()"></i>
