--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
         <div class="project-list">
             <div class="card">
                 <h3>Simple Calculator</h3>
-                <div class="ui-ux"><img src="calculator.png" alt=""></div>
+                <div class="ui"><img src="calculator.png" alt=""></div>
                  <a href="https://github.com/AnitaSahoo2002/Simple-calculator.github.io"><button>View Project</button></a> 
             </div>
         <div class="card">
             <h3>Digital Clock</h3>
-            <div class="ui-ux"><img src="Digital_clock.png" alt=""></div>
+            <div class="ui"><img src="Digital_clock.png" alt=""></div>
             <a href="https://github.com/AnitaSahoo2002/Digital_clock"><button>View Project</button></a>
         </div>
         <div class="card">
             <h3>Snake-Mania</h3>
-            <div class="ui-ux"><img src="Snake.png" alt=""></div>
+            <div class="ui"><img src="Snake.png" alt=""></div>
              <a href="https://github.com/AnitaSahoo2002/Snake_mania"><button>View Project</button></a> 
         </div>
     </div>
